[package]
name = "ss"
version = "0.1.1"
authors = ["Antoine d'Aligny <antoinedaligny@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI args parser
argh = "0.1.3"

# Dev server
tide = "0.13.0"

# Async scheduler
async-std = { version = "1.6.3", features = ["attributes"] }

# Open link in browser
open = "1.4.0"

# Listen to filesystem change
hotwatch = "0.4.3"

# Colorize console log with ANSI sequence
colored = "2.0.0"

# To format time
chrono = "0.4.15"
